--- a/BankSystem/AccountsPage.xaml
+++ b/BankSystem/AccountsPage.xaml
@@ -1,14 +1,45 @@
 ﻿<Page x:Class="BankSystem.AccountsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:BankSystem"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      mc:Ignorable="d"
+      d:DesignHeight="500" d:DesignWidth="740"
       Title="AccountsPage">
 
-    <Grid>
-        
+    <Grid Background="#B8D8C8">
+        <StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
+            <ListView x:Name="AccountItems" Background="Transparent" HorizontalAlignment="Left"
+                      ScrollViewer.CanContentScroll="False" Width="500">
+                <Border Background="#2E8B57" Width="460" Height="60" CornerRadius="8"
+                        BorderThickness="1" BorderBrush="Black">
+                    <Grid>
+                        <TextBlock Text="#0000 0000 0000 0000" FontSize="20"
+                                   VerticalAlignment="Center" HorizontalAlignment="Center"
+                                   Margin="0 0 100 0" Foreground="#FFC3A0"
+                                   TextDecorations="Underline"/>
+                        <TextBlock Text="500p" HorizontalAlignment="Right"
+                                   VerticalAlignment="Bottom" FontSize="15"
+                                   Foreground="DarkGray" Margin="0 0 10 3"/>
+                    </Grid>
+                </Border>
+            </ListView>
+            <Border Background="#B0B0B0" Width="240" CornerRadius="10 0 0 10">
+                <Grid>
+                    <Grid Background="Red" Margin="0 0 0 40">
+
+                    </Grid>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                                VerticalAlignment="Bottom" Margin="0 0 0 8">
+                        <Button Content="Добавить" FontSize="14" Width="80"
+                                Click="AddAccountButton_Click"/>
+                        <Rectangle Width="20"/>
+                        <Button Content="Удалить" FontSize="14" Width="80"
+                                Click="DeleteAccountButton_Click"/>
+                    </StackPanel>
+                </Grid>
+            </Border>
+        </StackPanel>
     </Grid>
 </Page>
