--- a/BankSystem/MainWindow.xaml
+++ b/BankSystem/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BankSystem"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="800" ResizeMode="NoResize">
+        Title="MainWindow" Height="500" Width="800" ResizeMode="NoResize"
+        Closed="Window_Closed">
     <Window.Resources>
 
         <!--<Storyboard x:Key="CustomButtonHoverStoryboard">
