--- a/BankSystem/TransferPage.xaml
+++ b/BankSystem/TransferPage.xaml
@@ -83,7 +83,7 @@
                                     VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
                             </StackPanel>
                             <Button x:Name="transferButton" Content="Перевести" Margin="0 12 0 0" FontSize="14" Width="200" Height="24" Cursor="Hand"
-                                    Style="{StaticResource SubmitButtonStyle}" Template="{StaticResource SubmitButtonTemplate}"/>
+                                    Style="{StaticResource SubmitButtonStyle}" Template="{StaticResource SubmitButtonTemplate}" Click="depositButton_Click" />
                         </StackPanel>
                     </StackPanel>
                 </Border>
@@ -105,7 +105,7 @@
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                                 <Label Content="Сумма" FontSize="14"  Foreground="White"/>
-                                <TextBox x:Name="tbAmount1" Width="160" Height="23" FontSize="14" Margin="0 5 0 5" VerticalContentAlignment="Center"/>
+                                <TextBox x:Name="tbAmount2" Width="160" Height="23" FontSize="14" Margin="0 5 0 5" VerticalContentAlignment="Center"/>
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                                 <Label Content="Валюта" FontSize="14" Foreground="White" />
